// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloWorld should render component with custom text 1`] = `
<div>
  <p>
    Lorem Ipsum
  </p>
</div>
`;

exports[`HelloWorld should render component with default text 1`] = `
<div>
  <p>
    Hello World!
  </p>
</div>
`;
